src/index.scss
@import "./utils/styles/colors";

:root {
    font-family: "Monserrat", "Trebuchet MS";
    color: black;
}

a {
    color: black;
}
a:visited {
    text-decoration: none;
}

header {
    height: 68px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 45px 100px 0;

    img {
        max-width: 100%;
        height: auto;
        object-fit: contain;
    }

    nav {
        display: flex;
        gap: 57px;

        .nav-link {
            font-size: 24px;
            text-decoration: none;
        }
        .nav-link:hover {
            text-decoration: underline;
        }
    }
}

.banner {
    position: relative;
    border-radius: 25px;
    height: 223px;
    width: 100%;
    margin: 50px 100px 0;

    .banner-background {
        object-fit: cover;
        height: inherit;
        width: 100%;
        border-radius: inherit;
        z-index: 0;
    }

    .banner-filter {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        z-index: 1;
        background-color: black;
        opacity: 0.6;
        border-radius: inherit;
    }

    .banner-content {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 2;
        color: white;
        font-size: 48px;
        font-weight: 700;
        -webkit-text-stroke: 1px black;
        text-shadow: rgba(0, 0, 0, 0.25) 0 4px 4px;
        inline-size: max-content;
    }
}

.home-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 43px;
    margin: 50px 100px;

    #gallery {
        padding: 56px 50px 43px;
        background-color: $backgroundGrey;
        border-radius: 25px;
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 60px 50px;

        .thumbnail {
            position: relative;
            border-radius: 10px;
            width: 340px;
            height: 340px;
            background-color: $backgroundRed;

            img {
                object-fit: cover;
                height: inherit;
                width: 100%;
                border-radius: inherit;
                z-index: 0;
            }

            .thumbnail-title {
                position: absolute;
                left: 20px;
                bottom: 20px;
                color: white;
                size: 18px;
                font-weight: 700;
                z-index: 1;
            }
        }
    }
}

.collapse-bars {
    margin-top: 38px;
    display: flex;
    flex-direction: column;
    gap: 28px;
}

.collapse-bar {
    display: flex;
    flex-direction: column;
    gap: 0;

    .top-bar {
        width: inherit;
        display: flex;
        justify-content: space-between;
        align-items: center;
        background-color: $backgroundRed;
        border-radius: 5px;
        padding: 10px;

        p {
            margin: 0;
            color: white;
            font-size: 18px;
            font-weight: 700;
        }

        .fa-chevron-up {
            padding: 0;
            display: flex;
            justify-content: center;
            align-items: center;
            color: white;
            width: 32px;
            height: 32px;
            transform: rotate(0deg);

            &.open {
                background-color: $backgroundRed;
                transform: rotate(0deg);
                transition: transform 0.3s ease-in-out;
            }
            &.closed {
                transform: rotate(-180deg);
                transition: transform 0.3s ease-in-out;
            }
        }
    }

    > .open {
        background-color: $backgroundGrey;
        height: fit-content;
        max-height: fit-content;
        transition: height 0.3s ease-out;
        width: 100%;
        padding: 0 10px;
        border-radius: 5px;
    }
    > .closed {
        height: 0;
        overflow: hidden;
        transition: all 0.3s ease-out;
        padding: 0 10px;
        width: 100%;
    }

    li,
    p {
        color: black;
        font-weight: 400;
        font-size: 18px;
        overflow: hidden;
    }
}

.a-propos-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 38px 100px;

    .collapse-bar {
        width: 1024px;
    }
}

.not-found-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 139px;
    margin: 139px 0;

    .not-found {
        color: $backgroundRed;
        font-size: 288px;
        font-weight: 700;
        text-align: center;
        margin: 0;
    }

    .not-found-prompt {
        color: $backgroundRed;
        font-size: 36px;
        font-weight: 500;
        text-align: center;
    }

    a.not-found-link {
        color: black;
        text-decoration: underline;
        text-align: center;
    }
}

footer {
    height: 209px;
    background-color: black;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;

    img {
        width: 122px;
    }

    .copyright {
        color: white;
        font-size: 24px;
        font-weight: 500;
    }
}

